Mobile Nav bugfix + ACUs
Mobilenav was being able to be interacted despite not being "drawn out" yet (meaning if you click where the discord icon will be (even if its not there yet), you will get sent to the discord. Ergo, creating invisible links).

Also added other small fixes and the ACU tab (still a WIP)

--- a/css/index.css
+++ b/css/index.css
@@ -82,6 +82,11 @@ ul {
   background-color: var(--color-black)
 }
 
+.separationBar {
+  padding: 20px;
+  background-color:var(--color-dark-gray);
+}
+
 /*=============== Nav Bar =============== */
 
 /*===== Top Navbar =====*/
@@ -292,12 +297,15 @@ transition: 0.5s;
 .mobilenav_mobile {
 opacity: 0;
 height: 0;
+display: none;
 }
+
 
 .mobilenav_mobile_active {
   opacity: 100;
   height: 100%;
   transition: 1s;
+  display: block;
 }
 
 #mobilenav_bg_sticky {
@@ -439,16 +447,16 @@ height: 0;
   position: relative;
   padding: 50px;
   font-family: var(--title-font-family);
-  font-size: 60px;
+  font-size: 70px;
   text-align: justify;
   text-justify: inter-word;
+
 }
 
 .scroll_absolute {
   position: absolute;
   left: 100px;
 }
-
 
 
 
@@ -469,8 +477,8 @@ height: 0;
   object-fit: contain;
   display: grid;
   justify-self: end;
-  
 }
+
 
 .scroll_text {
   font-size: 22px;
@@ -482,15 +490,18 @@ height: 0;
 
 
 
-.gold_text {
+
+.highlightText {
   color: var(--color-gold); 
 }
 .scroll_image {
   width: 60%;
   justify-self: end;
-
 }
 
+.scrollImageRotate {
+  justify-self: start;
+}
 
 .scroll_item .scroll_image img {
   width: 80%; 
@@ -502,6 +513,8 @@ height: 0;
 .scrollFade {
   opacity: 0;
 }
+
+
 
 
 
@@ -518,12 +531,12 @@ height: 0;
    opacity: 1;
    transition: 2s;
  }
- .scrolled.scrolledRight {
-	animation: scrolledRight 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+ .scrolled.animationRigth {
+	animation: animationRigth 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 
   
 }
- @keyframes scrolledRight {
+ @keyframes animationRigth {
   0% {
     transform: scale(0.5);
     transform-origin: 100% 50%;
@@ -534,11 +547,11 @@ height: 0;
   }
 }
 
-.scrolled.scrolledLeft {
-	animation: scrolledLeft 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+.scrolled.animationLeft {
+	animation: animationLeft 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   
 }
-@keyframes scrolledLeft {
+@keyframes animationLeft {
   0% {
     transform: scale(0.5);
     transform-origin: 0% 50%;
@@ -548,6 +561,19 @@ height: 0;
     transform-origin: 0% 50%;
   }
 }
+
+.animationFlip {
+	animation: animationFlip 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) reverse both;
+}
+@keyframes animationFlip {
+  0% {
+    transform: rotateX(0);
+  }
+  100% {
+    transform: rotateX(-180deg);
+  }
+}
+
 
 
 
@@ -575,7 +601,7 @@ height: 0;
 .mainSplitContainer {
   display: grid;
   grid-template-columns: repeat(12, minmax(0px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-rows: repeat(3, minmax(100px, 1fr));
   background-color: var(--color-black);
   padding: 10px 300px;
   justify-items: center;
@@ -583,34 +609,43 @@ height: 0;
   font-size: 2vw;
 }
 
+
 .splitContainer {
   justify-items: center;
 }
 
-.split3 {
+.column3 {
   grid-column: span 3;
   
 }
 
-.split6 {
+.column4 {
+  grid-column: span 4;
+  
+}
+
+.column6 {
   grid-column: span 6;
 }
-.split8 {
+.column8 {
   grid-column: span 8;
 }
-.split10 {
+.column10 {
   grid-column: span 10;
 }
 
-.split12 {
+.column12 {
   grid-column: span 12;
 }
+
+
 .splitItem {
   position: relative;
   overflow: hidden;
   object-fit: contain;
   display: grid;
   justify-self: end;
+
 }
 
 .splitAbsoluteText {
@@ -636,10 +671,30 @@ height: 0;
 .splitImage img {
   width: 100%; 
   height: 100%;
-  object-fit: contain;
+  object-fit: fill;
   overflow: hidden;
-  filter: brightness(0.5);
   transition: 0.4s ;
+  border-radius: 20px;
+}
+
+.splitDark {
+  filter: brightness(0.5);
+}
+
+.factionPadding {
+  padding: 0px;
+  gap: 0px;
+  margin: 0px;
+}
+
+.factionCard{
+  width: 20vw;
+}
+
+.splitFaction {
+
+  top: 0;
+  opacity: 0;
 }
 
 
@@ -651,6 +706,8 @@ height: 0;
   .scroll_absolute {
     position: relative;
   }
+
+
 
   .scroll_container {
     justify-content: center;
@@ -734,7 +791,7 @@ height: 0;
   }
 
   .mainSplitContainer {
-    margin: 20px;
+    margin: 0px;
     font-size: 15px;
     padding: 0px;
     gap: 5px;
